# feitian-mldsa-authenticator

./: Cargo.toml  FIDO2_DETECTION_ANALYSIS.md  FidoSoftwareAuthenticator.txt  PDF_REQUIREMENTS_CHECKLIST.md  README.md
.github/workflows/: ci.yml  usbip-authenticator.yml
authenticator/: Cargo.toml
authenticator/src/: ctap.rs  lib.rs
authenticator/src/ctap/: tests.rs
ci/: hid-e2e.sh
contrib/systemd/: feitian-authenticator.service
contrib/udev/: 70-feitian-authenticator.rules
docs/: developer-notes.md  hid-host-design.md  hid-runner-validation.md  validation.md
download-ripgrepSCJSfZ/: tmp-file
host-runner/: Cargo.toml
host-runner/src/: lib.rs
patches/ssmarshal/src/: lib.rs
patches/usbip-device/: .cargo_vcs_info.json  Cargo.toml
patches/usbip-device/src/: cmd.rs  handler.rs  lib.rs
pc-hid-runner/: Cargo.toml  build.rs
pc-hid-runner/src/: cli.rs  ctaphid.rs  lib.rs  linux.rs  main.rs  permissions.rs  service.rs  uhid.rs
pc-hid-runner/src/transport/: ctaphid_host.rs  mod.rs
pc-hid-runner/tests/: fido2_token.rs  hid_integration.rs
pc-hid-runner/tests/common/: mod.rs
pc-usbip-runner/: Cargo.toml  Makefile  README.md
pc-usbip-runner/examples/: authenticator.rs  dummy.rs
pc-usbip-runner/src/: ccid.rs  ctaphid.rs  lib.rs
prebuilt_liboqs/linux-x86_64/: liboqs_python-0.14.0-py3-none-any.whl
prebuilt_liboqs/linux-x86_64/include/oqs/: oqsconfig.h
prebuilt_liboqs/linux-x86_64/lib/: liboqs.so.0.15.0-rc1  liboqs.so.8  liboqs.so.9
prebuilt_liboqs/linux-x86_64/lib/cmake/liboqs/: liboqsConfigVersion.cmake  liboqsTargets-release.cmake  liboqsTargets.cmake
prebuilt_liboqs/linux-x86_64/lib/pkgconfig/: liboqs.pc
runner/examples/: authenticator.rs
tests/integration/: pin_flow_classic.sh  pin_flow_pqc.sh
transport-core/: Cargo.toml
transport-core/src/: lib.rs  logging.rs  state.rs
transport-core/src/ctap/: constants.rs
trussed-mldsa/: Cargo.toml  build.rs
trussed-mldsa/mldsa-native/: mldsa.c  mldsa.h
trussed-mldsa/src/: lib.rs
trussed-mlkem/: Cargo.toml  build.rs
trussed-mlkem/src/: lib.rs
