[workspace]
members = [
    "trussed-mldsa",
    "authenticator",
    "trussed-mlkem",
    "pc-usbip-runner",
    "host-runner"
]

resolver = "2"

[patch.crates-io]
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "024e0eca5fb7dbd2457831f7c7bffe4341e08775" }
usbip-device = { path = "patches/usbip-device" }