[package]
name = "authenticator"
version = "0.1.0"
edition = "2021"

description = "Skeleton Trussed application demonstrating ML‑DSA integration"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0 OR MIT"

[dependencies]
trussed = "0.1.0"
ciborium = { version = "0.2", default-features = false }
heapless = "0.7"
littlefs2 = "0.4"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1", features = ["zeroize_derive"] }
serde = { version = "1", features = ["derive"] }
ctaphid-app = "0.1"
heapless-bytes = "0.3"

# Use our local wrapper for ML‑DSA.  By enabling all parameter set features the
# wrapper links to the stub C implementation for 44/65/87.
trussed-mldsa = { path = "../trussed-mldsa", features = ["mldsa44", "mldsa65", "mldsa87"] }
trussed-mlkem = { path = "../trussed-mlkem", features = ["mlkem512", "mlkem768", "mlkem1024"] }