[package]
name = "transport-core"
version = "0.1.0"
edition = "2021"

[dependencies]
interchange = "0.3.0"
littlefs2-core = "0.1"
log = { version = "0.4.14", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", features = ["getrandom"] }
trussed = { version = "0.1", default-features = false, features = ["log-all", "virt"] }

ctaphid-dispatch = { version = "0.3", features = ["log-all"], optional = true }
apdu-dispatch = { version = "0.3", optional = true }

[features]
default = []
ctaphid = ["ctaphid-dispatch"]
ccid = ["apdu-dispatch"]
