[package]
name = "transport-core"
version = "0.1.0"
edition = "2021"

[dependencies]
interchange = "0.3.0"
littlefs2 = "0.6"
littlefs2-core = "0.1"
log = { version = "0.4.14", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
chacha20 = { version = "0.9", features = ["std"] }
ciborium = { version = "0.2", default-features = false, features = ["std"] }
p256 = { version = "0.13", features = ["pkcs8"] }
rcgen = "0.11"
serde = { version = "1", features = ["derive"] }
trussed = { version = "0.1", default-features = false, features = ["log-all", "virt"] }

ctaphid-dispatch = { version = "0.3", features = ["log-all"], optional = true }
apdu-dispatch = { version = "0.3", optional = true }

[features]
default = []
ctaphid = ["ctaphid-dispatch"]
ccid = ["apdu-dispatch"]
